--- a/src/application-frame/styling/themes/basti_small.scss
+++ b/src/application-frame/styling/themes/basti_small.scss
@@ -263,7 +263,7 @@ body {
             width: var(--std-logo-width);
         }
 
-        .p-menuitem-icon {
+        .p-menuitem-icon:not(.profile-image) {
             max-width: var(--menuicon-size);
             font-size: var(--menuicon-size);
         }
